# hat-mariner

./: .buildinfo  CNAME  README.rst  client.html  index.html  mariner.html  objects.inv  pyproject.toml  requirements.pip.txt  search.html  searchindex.js  server.html
.doctrees/: client.doctree  environment.pickle  index.doctree  mariner.doctree  server.doctree
.github/workflows/: docs.yaml
_sources/: client.rst.txt  index.rst.txt  mariner.rst.txt  server.rst.txt
docs/: index.rst  mariner.rst
pending/schemas_json/: server.yaml
playground/: pdoc.sh
py_api/: index.html  search.js
py_api/hat/: mariner.html
py_api/hat/mariner/: client.html  common.html  server.html  transport.html
py_api/hat/mariner/server/: main.html  server.html
schemas_json/: mariner.yaml  server.yaml
src_doit/: __init__.py
src_py/hat/mariner/: client.py  common.py
src_py/hat/mariner/server/: __main__.py  main.py  server.py
src_py/hat/mariner/transport/: __init__.py  common.py  connection.py  encoder.py
test_pytest/: test_client.py  test_server.py  test_transport.py
