[project]
name = "hat-mariner"
version = "0.9.5"
description = "Hat mariner"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.12",
    "hat-drivers ~=0.9.1",
    "hat-event ~=0.9.36",
    "hat-json ~=0.6.2",
    "hat-monitor ~=0.8.19",
    "hat-util ~=0.6.19",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-mariner.git"
Documentation = "http://hat-mariner.hat-open.com"

[project.scripts]
hat-mariner-server = "hat.mariner.server.main:main"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.16.2",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.2"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
